ecmascript/parser/tests/test262-error-references/fail/a24d5a2bf175ee97.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/a24d5a2bf175ee97.js:1:3
  |
1 | a enum
  |   ^^^^

